--- a/beadando/MainWindow.xaml
+++ b/beadando/MainWindow.xaml
@@ -31,7 +31,7 @@
         </WrapPanel>
         <TextBlock HorizontalAlignment="Left" FontSize="16" TextWrapping="Wrap" Text="Beviteli mező: " VerticalAlignment="Top" Margin="30,0,0,0" Grid.Row="4" Grid.Column="0" Height="30" Width="101"/>
 
-        <TextBox x:Name="Szamla1_input" HorizontalAlignment="Left" Height="27" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="312" Margin="0,0,0,0" Grid.Row="4" Grid.Column="1"/>
+        <TextBox x:Name="Szamla1_input" HorizontalAlignment="Left" Height="27" TextWrapping="Wrap" VerticalAlignment="Top" Width="312" Margin="0,0,0,0" Grid.Row="4" Grid.Column="1"/>
 
         <TextBlock HorizontalAlignment="Left" FontSize="16" TextWrapping="Wrap" Text="Beviteli mező: " VerticalAlignment="Top" Margin="30,0,0,0" Grid.Row="4" Height="30" Width="101" Grid.Column="3"/>
 
@@ -47,17 +47,17 @@
         <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" Text="Számla 1" VerticalAlignment="Center" Height="20" Width="62" Grid.Column="0" Grid.Row="0"/>
 
         <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" Text="Számla tulajdonos: " VerticalAlignment="Center" Grid.Column="0" Grid.Row="1"/>
-        <TextBox x:Name="szamla1_tulaj" Text="tulaj" HorizontalAlignment="Left" Margin="20,6,0,6" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" Width="303" ></TextBox>
+        <TextBox x:Name="szamla1_tulaj" IsEnabled="False" Text="tulaj" HorizontalAlignment="Left" Margin="20,6,0,6" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" Width="303" ></TextBox>
 
         <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" Text="Számla egyenlege: " VerticalAlignment="Center" Width="126" Grid.Column="0" Grid.Row="2"/>
-        <TextBox x:Name="szamla1_egyenleg" Text="egyenleg" HorizontalAlignment="Left" Margin="20,6,0,6" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" Width="303" ></TextBox>
+        <TextBox x:Name="szamla1_egyenleg" IsEnabled="False" Text="egyenleg" HorizontalAlignment="Left" Margin="20,6,0,6" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" Width="303" ></TextBox>
 
         <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" Text="Számla 2" VerticalAlignment="Center" Height="20" Width="62" Grid.Column="3" Grid.Row="0"/>
 
         <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" Text="Számla tulajdonos: " VerticalAlignment="Center" Grid.Column="3" Grid.Row="1"/>
-        <TextBox x:Name="szamla2_tulaj" Text="tulaj" HorizontalAlignment="Left" Margin="20,6,0,6" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="4" Grid.Row="1" Width="302" ></TextBox>
+        <TextBox x:Name="szamla2_tulaj" IsEnabled="False" Text="tulaj" HorizontalAlignment="Left" Margin="20,6,0,6" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="4" Grid.Row="1" Width="302" ></TextBox>
 
         <TextBlock HorizontalAlignment="Left" Margin="30,0,0,0" TextWrapping="Wrap" Text="Számla egyenlege: " VerticalAlignment="Center" Width="126" Grid.Column="3" Grid.Row="2"/>
-        <TextBox x:Name="szamla2_egyenleg" Text="egyenleg" HorizontalAlignment="Left" Margin="20,6,0,6" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="4" Grid.Row="2" Width="302" ></TextBox>
+        <TextBox x:Name="szamla2_egyenleg" IsEnabled="False" Text="egyenleg" HorizontalAlignment="Left" Margin="20,6,0,6" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="4" Grid.Row="2" Width="302" ></TextBox>
     </Grid>
 </Window>
